--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,20 @@
 {
-	"name": "Miguel Cast - Developer",
-	"icons": [
-		{
-			"src": "\/android-chrome-192x192.png",
-			"sizes": "192x192",
-			"type": "image\/png"
-		},
-		{
-			"src": "\/android-chrome-512x512.png",
-			"sizes": "512x512",
-			"type": "image\/png"
-		}
-	],
-	"theme_color": "#ffffff",
-	"display": "standalone"
+  "short_name": "Miguel Cast",
+  "name": "Miguel Cast - Developer",
+  "icons": [
+    {
+      "src": "%PUBLIC_URL%\/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image\/png"
+    },
+    {
+      "src": "%PUBLIC_URL%\/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image\/png"
+    }
+  ],
+  "start_url": "./index.html",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
