--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@styled-system/css": "^5.1.5",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
