--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-icons": "^3.10.0",
     "styled-components": "5.1.1",
     "styled-system": "^5.1.5"
   },
