--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@styled-system/css": "^5.1.5",
+    "graphql-request": "^2.0.0",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
