--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-icons": "^3.10.0",
+    "react-markdown": "^4.3.1",
     "styled-components": "5.1.1",
     "styled-system": "^5.1.5"
   },
