--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "16.13.1",
     "react-icons": "3.10.0",
     "react-markdown": "4.3.1",
+    "react-syntax-highlighter": "^13.0.0",
     "styled-components": "5.1.1",
     "styled-system": "5.1.5"
   },
