--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "9.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "3.10.0",
     "react-markdown": "4.3.1",
     "react-syntax-highlighter": "^13.0.0",
