--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   },
   "dependencies": {
     "@styled-system/css": "5.1.5",
-    "graphql-request": "2.0.0",
-    "next": "9.5.5",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "graphql": "^15.4.0",
+    "graphql-request": "3.3.0",
+    "next": "10.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-gtm-module": "^2.0.11",
-    "react-icons": "3.10.0",
-    "react-markdown": "4.3.1",
-    "react-syntax-highlighter": "^13.0.0",
-    "styled-components": "5.1.1",
+    "react-icons": "3.11.0",
+    "react-markdown": "5.0.2",
+    "react-syntax-highlighter": "^15.2.1",
+    "styled-components": "5.2.0",
     "styled-system": "5.1.5"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "1.10.7"
+    "babel-plugin-styled-components": "1.11.1"
   }
 }
