--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build && next export",
     "export": "next export",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "test:w": "jest --watch"
   },
   "dependencies": {
     "@styled-system/css": "5.1.5",
@@ -23,6 +25,12 @@
     "styled-system": "5.1.5"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "1.12.0"
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/react-hooks": "^5.0.3",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-styled-components": "1.12.0",
+    "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.1"
   }
 }
