--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "export": "next export",
+    "build": "next build",
     "start": "next start",
     "test": "jest",
     "test:w": "jest --watch"
@@ -14,11 +13,11 @@
     "@styled-system/css": "5.1.5",
     "graphql": "^15.5.0",
     "graphql-request": "3.4.0",
-    "next": "10.0.6",
+    "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-gtm-module": "^2.0.11",
-    "react-icons": "3.11.0",
+    "react-icons": "4.2.0",
     "react-markdown": "5.0.3",
     "react-syntax-highlighter": "^15.4.3",
     "styled-components": "5.2.1",
@@ -27,7 +26,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/react-hooks": "^5.0.3",
+    "@testing-library/react-hooks": "^5.1.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "1.12.0",
     "jest": "^26.6.3",
