--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "test:w": "jest --watch"
+    "test:w": "jest --watch",
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@mdx-js/loader": "1.6.22",
+    "@mdx-js/react": "1.6.22",
+    "@next/mdx": "10.0.9",
     "@styled-system/css": "5.1.5",
+    "framer-motion": "4.0.3",
     "graphql": "^15.5.0",
     "graphql-request": "3.4.0",
     "next": "10.0.9",
+    "next-mdx-remote": "2.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-gtm-module": "^2.0.11",
@@ -30,10 +37,16 @@
     "styled-system": "5.1.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
+    "@storybook/react": "^6.1.21",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
     "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "1.12.0",
     "jest": "^26.6.3",
     "react-test-renderer": "^17.0.1"
